--- a/environment.yml
+++ b/environment.yml
@@ -87,6 +87,7 @@ dependencies:
   - camelot-py
   - plotnine
   - html5lib
+  - pip
   - pip:
     - abc-classroom==0.1.9
     - geonamescache==1.5.0
